testsuite/tests/semantic_errors/complex_binop/test.out
Analyzing test.adb
##################

Resolving xrefs for node <AssignStmt test.adb:6:4-6:27>
*******************************************************

test.adb:6:9: error: expected Boolean, got Integer
6 |    X := Foo (2 + 2, True);
  |         ^^^^^^^^^^^^^^^^^



Analyzing test_2.adb
####################

Resolving xrefs for node <AssignStmt test_2.adb:6:4-6:31>
*********************************************************

test_2.adb:6:25: error: expected Integer, got Boolean
6 |    X := Foo (2 + 2, 2 + True);
  |                         ^^^^



Analyzing test_3.adb
####################

Resolving xrefs for node <AssignStmt test_3.adb:7:4-7:27>
*********************************************************

test_3.adb:7:9: error: no matching alternative (of 2 candidates)
7 |    X := Foo (2 + 2, True);
  |         ^^^

test_3.adb:2:51: info: expected Boolean, got Integer
2 |    function Foo (X : Integer; Y : Boolean) return Integer is (X);
  |                                                   ^^^^^^^

test_3.adb:3:35: info: expected Integer, got Boolean
3 |    function Foo (X : Integer; Y : Integer) return Boolean is (X);
  |                                   ^^^^^^^



Done.
